# discord-events-export

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  kube.yaml
src/: discord.rs  ical.rs  main.rs
